dnl ---------------------------------------------------------------------------
dnl Name:       configure.in
dnl Purpose:    configure script for nanoComp
dnl Author:     Bernat Ràfales Mulet
dnl Version:     $Revision: 1.3 $
dnl ---------------------------------------------------------------------------

    
AC_INIT(nanoComp, 1.0, the_bell@users.sf.net)

AC_PREREQ(2.59)

AC_CONFIG_SRCDIR(src/nanoComp.cpp)

AM_INIT_AUTOMAKE

AC_LANG(C++)

AC_PROG_INSTALL

AC_PROG_CPP

AC_PROG_CXX
    
AM_OPTIONS_WXCONFIG
reqwx=2.6.0
AM_PATH_WXCONFIG($reqwx, wxWin=1)
if test "$wxWin" != 1; then
	AC_MSG_ERROR([
		wxWidgets must be installed on your system.
 
		Please check that wx-config is in path, the directory
		where wxWidgets libraries are installed (returned by
		'wx-config --libs' or 'wx-config --static --libs' command)
		is in LD_LIBRARY_PATH or equivalent variable and
		wxWidgets version is $reqwx or above.
		])
fi
 
CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
CFLAGS="$CFLAGS $WX_CFLAGS_ONLY"
LIBS="$LIBS $WX_LIBS"

AC_SUBST(WX_LIBS)
AC_SUBST(WX_CXXFLAGS)
AC_SUBST(WX_CPPFLAGS)

AC_OUTPUT([Makefile
                      src/Makefile 
                      src/resources/Makefile])
