SUBDIRS = resources

bin_PROGRAMS = nanocomp

nanocomp_SOURCES = nanoComp.hpp \
				   nanoComp.cpp \
				   mainController.hpp \
				   mainController.cpp \
				   forbiddenPatternView.hpp \
				   forbiddenPatternView.cpp \
				   layoutView.hpp \
				   layoutView.cpp \
				   ruleView.hpp \
				   ruleView.cpp \
				   layoutCanvas.hpp \
				   layoutCanvas.cpp \
				   nanoFrame.hpp \
				   nanoFrame.cpp \
				   forbiddenPattern.hpp \
				   forbiddenPattern.cpp \
				   forbiddenPatternManager.hpp \
				   forbiddenPatternManager.cpp \
				   grid.hpp \
				   grid.cpp \
				   layoutConfig.hpp \
				   layoutConfig.cpp \
				   layoutManager.hpp \
				   layoutManager.cpp \
				   rule.hpp \
				   rule.cpp \
				   ruleManager.hpp \
				   ruleManager.cpp \
				   truthTable.hpp \
				   truthTable.cpp \
				   truthTableManager.hpp \
				   truthTableManager.cpp \
				   truthTableView.hpp \
				   truthTableView.cpp \
				   truthTableCanvas.hpp \
				   truthTableCanvas.cpp \
				   fileManagerView.hpp \
				   fileManagerView.cpp \
				   ruleDiskManager.hpp \
				   ruleDiskManager.cpp \
				   forbiddenPatternDiskManager.hpp \
				   forbiddenPatternDiskManager.cpp \
				   layoutDiskManager.hpp \
				   layoutDiskManager.cpp \
				   truthTableDiskManager.hpp \
				   truthTableDiskManager.cpp \
				   lex.nanocomp.cpp \
				   flexDefines.hpp \
				   simulation.hpp \
				   simulation.cpp \
				   simulationManager.hpp \
				   simulationManager.cpp \
				   simulationView.hpp \
				   simulationView.cpp \
				   nanoStatusBar.hpp \
				   nanoStatusBar.cpp \
				   resultsView.hpp \
				   resultsView.cpp \
				   nanocompAboutDialog.hpp \
				   nanocompAboutDialog.cpp \
				   FlexLexer.h

nanocomp_LDADD = $(WX_LIBS)
nanocomp_CXXFLAGS=@WX_CXXFLAGS@ -fno-default-inline
