EXTRA_DIST = cross.xpm \
			 fileopen.xpm \
			 filesave.xpm \
			 filesaveas.xpm \
			 forward.xpm \
			 new.xpm \
			 black.xpm \
			 blue.xpm \
			 red.xpm \
			 green.xpm \
			 forward.xpm \
			 cross.xpm \
			 grey.xpm \
			 pause.xpm \
			 play.xpm \
			 step.xpm \
			 fforward.xpm \
			 logo.xpm \
			 icon.xpm
